# robotics_dojo_project

./: .gitignore  MERGE_ALL_SUMMARY.md  MERGE_STRATEGY.md  QUICK_START_BRANCHES.md  README.md
ros_arduino_bridge/: COLOR_SENSOR_FIX.md  DOUBLE_INTEGRATION_FIX.md  DRIFT_PREVENTION_GUIDE.md  EKF_IMPLEMENTATION_REVIEW.md  EKF_QUICK_REFERENCE.md  EKF_UNIT_CONVERSION_FIX.md  FIXES_APPLIED_SUMMARY.md  IMU_IMPLEMENTATION.md  IMU_MOTOR_FIX_TESTING.md  IMU_POSITION_GUIDE.md  IMU_SENSOR_FUSION_STATUS.md  INITIAL_POSE_PUBLISHER.md  MAPPING_ISSUE_EKF_SOLUTION.md  MAPPING_TURN_ISSUE_FIX.md  MESH_URDF_IMPLEMENTATION.md  MOTOR_DEAD_ZONE_FIX.md  MOTOR_M4_TROUBLESHOOTING.md  NAV2_TF_FIX.md  NEW_SENSORS_IMPLEMENTATION.md  ODOMETRY_CALIBRATION.md  PYTREES_INTEGRATION_GUIDE.md  PYTREES_INTEGRATION_SUMMARY.md  QUICK_FIX_MAPPING_TURNS.md  README.md  SENSOR_FUSION_IMPLEMENTATION.md  SENSOR_FUSION_SUMMARY.md  SERIAL_ERROR_FIX.md  TESTING_COMMANDS.md  TF_CONFLICT_FIX.md  TF_FIX_COMPLETE_SUMMARY.md  TF_QUICK_REFERENCE.md  YAW_DIFFERENTIATION_FIX.md  all_project_content.txt  arduino_monitor.py  calibrate_robot.py  package.xml  scan_throttle.py  setup.cfg  setup.py  test_arduino_serial.py
ros_arduino_bridge/behavior_tree/: CAMERA_SERVO_ANGLES.md  CHEAT_SHEET.md  COMPLETE_MISSION_GUIDE.md  COORDINATE_CONVERSION_GUIDE.md  COORDINATE_QUICK_START.md  CUBE_DELIVERY_GUIDE.md  CUBE_DELIVERY_README.md  DISEASE_DETECTION_QUICKSTART.md  DISEASE_DETECTION_TIMEOUT.md  FINAL_MISSION_STATUS.md  FINAL_STATUS.md  IMPLEMENTATION_SUMMARY.md  INCREMENTAL_MOVE_GUIDE.md  INSPECTION_REPORT.md  LAUNCH_CHEAT_SHEET.md  LAUNCH_GUIDE.md  MANUAL_INTERVENTION_SUPPORT.md  MAP_GUIDE.md  MISSION_WORKFLOW.md  OFFLOAD_SEQUENCE_UPDATE.md  PICKUP_ORIENTATION_UPDATE.md  PROJECT_SUMMARY.md  QUICKSTART.md  QUICK_REFERENCE.md  README.md  README_COMPETITION.md  TIMING_QUICK_REFERENCE.md  VALIDATION_CHECKLIST.md  VISUAL_OVERVIEW.md  WAYPOINT_CALCULATION.md  WAYPOINT_CONFIGURATION_GUIDE.md  behavior_tree_launcher.py  behavior_tree_orchestrator.py  competition_mission.py  coordinate_converter.py  cube_delivery_mission.py  incremental_move_behavior.py  incremental_movement_utils.py  inspect_timeout_implementation.py  launch_competition.py  (+9 more)
ros_arduino_bridge/behavior_tree/competition_2025/: ARCHITECTURE_EXPLAINED.md  DEPLOYMENT_GUIDE.md  FIELD_MAP.md  INDEX.md  INTEGRATION_COMPLETE.md  PYTREES_COMPARISON.md  QUICK_START.md  README.md  UPDATE_SUMMARY.md  USING_EXISTING_FILES.md  VISUAL_DIAGRAMS.md  WHAT_I_DID.md  competition_mission.py
ros_arduino_bridge/behavior_tree/nodes/: __init__.py  camera_behaviors.py  color_sensor_behaviors.py  disease_detection_behaviors.py  motor_control_behaviors.py  navigation_behaviors.py
ros_arduino_bridge/config/: ekf_config.yaml  mapper_params_online_async.yaml  robot_params.yaml  ros2_control.yaml  view_robot.rviz
ros_arduino_bridge/deployment/: IMPLEMENTATION_SUMMARY.md  REORGANIZATION_COMPLETE.md  validate_deployment.sh
ros_arduino_bridge/deployment/laptop/: laptop_base_station.launch.py  laptop_navigation.launch.py  nav2_params.yaml  setup_laptop.sh  slam_config_laptop.yaml  start_mapping.sh  start_navigation.sh
ros_arduino_bridge/deployment/pi/: INSTALL_ROBOT_LOCALIZATION.md  pi_robot_hardware.launch.py  setup_pi.sh  start_robot.sh  test_hardware.sh
ros_arduino_bridge/deployment/scripts/: CLOCK_SYNC_FIX.md  COMPLETE_WORKFLOW.md  NAVIGATION_SETUP.md  NAVIGATION_TROUBLESHOOTING_GUIDE.md  README.md
ros_arduino_bridge/deployment/shared/: README.md  materials.xacro  robot_description.xacro
ros_arduino_bridge/launch/: arduino_bridge.py  arduino_bridge_with_ekf.launch.py  arduino_only.launch.py  behavior_tree_navigation.launch.py  display_launcher.launch.py  full_slam_test.launch.py  laptop_competition_processing.launch.py  pi_competition_hardware.launch.py  sensor_fusion.launch.py  slam_launch.py  slam_with_sensor_fusion.launch.py  test_incremental_navigation.launch.py  test_teleop.launch.py
ros_arduino_bridge/meshes/: back_left_wheel_1.stl  back_right_wheel_1.stl  base_link.stl  imu_1.stl  lidar_1.stl
ros_arduino_bridge/ros_arduino_bridge/: initial_pose_publisher.py  ros_arduino_bridge.py  slam_diagnostics.py
ros_arduino_bridge/scripts/: check_tf_tree.py  compare_odometry.py  diagnose_mapping_issue.sh  diagnose_tf.sh
ros_arduino_bridge/urdf/: materials.xacro  new_robot_urdf.gazebo  new_robot_urdf.trans  new_robot_urdf.xacro
rpi_camera_package/: CAMERA_FIX_SUMMARY.md  CLEANUP_SUMMARY.md  DISEASE_DETECTION.md  DISEASE_DETECTION_IMPLEMENTATION.md  IMPLEMENTATION_SUMMARY.md  PI_CAMERA_SETUP.md  QUICKSTART.md  QUICK_REFERENCE.md  README.md  SHELL_SCRIPTS_IMPLEMENTATION.md  TESTING_CHECKLIST.md  package.xml  setup.cfg  setup.py
rpi_camera_package/launch/: camera_system.launch.py  color_detection.launch.py
rpi_camera_package/rpi_camera_package/: camera_publisher.py  color_detection_subscriber.py  rpicam_node.py
rpi_camera_package/scripts/: README.md  REORGANIZATION_SUMMARY.md
(+160 files in other folders)
