<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypelocation="http://download.ros.org/schema/package_format3.xsd"?>
<package format="3">
  <name>ros_arduino_bridge</name>
  <version>1.0.0</version>
  <description>ROS2 bridge for Arduino-based 4WD robot with URDF support</description>
  <maintainer email="you@example.com">Your Name</maintainer>
  <license>BSD</license>

  <depend>rclpy</depend>
  <depend>geometry_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>std_msgs</depend>
  <depend>tf2_ros</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>xacro</depend>
  <depend>robot_state_publisher</depend>
  <depend>joint_state_publisher</depend>
  <depend>rviz2</depend>
  <depend>teleop_twist_keyboard</depend>  <!-- ADD THIS -->

  <exec_depend>python3-pyserial</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
